<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.DetailContentActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/accelerate_decelerate_interpolator"
            app:contentScrim="@color/colorPrimary"
            app:titleEnabled="true">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/backdropPath"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/backdrop_gotham" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:adjustViewBounds="true"
                android:background="@drawable/shadow"
                android:contentDescription="@string/posterPath"
                android:elevation="8dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@id/iv_star1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_bias="1"
                tools:src="@drawable/poster_gotham" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_poster"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <TextView
                android:id="@+id/release"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/release"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/release"
                app:layout_constraintEnd_toEndOf="@id/release"
                app:layout_constraintStart_toStartOf="@id/release"
                app:layout_constraintTop_toBottomOf="@id/release" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/bg"
                android:elevation="4dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/rating"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/iv_star1"
                app:layout_constraintEnd_toEndOf="@id/iv_star5"
                app:layout_constraintTop_toBottomOf="@id/tv_release" />

            <ImageView
                android:id="@+id/iv_star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_star_border_24dp"
                android:tint="@android:color/tertiary_text_light"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_rating"/>

            <ImageView
                android:id="@+id/iv_star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_border_24dp"
                android:tint="@android:color/tertiary_text_light"
                app:layout_constraintStart_toEndOf="@id/iv_star1"
                app:layout_constraintTop_toTopOf="@id/iv_star1"
                app:layout_constraintBottom_toBottomOf="@id/iv_star1"/>

            <ImageView
                android:id="@+id/iv_star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_border_24dp"
                android:tint="@android:color/tertiary_text_light"
                app:layout_constraintStart_toEndOf="@id/iv_star2"
                app:layout_constraintTop_toTopOf="@id/iv_star2"
                app:layout_constraintBottom_toBottomOf="@id/iv_star2"/>

            <ImageView
                android:id="@+id/iv_star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_border_24dp"
                android:tint="@android:color/tertiary_text_light"
                app:layout_constraintStart_toEndOf="@id/iv_star3"
                app:layout_constraintTop_toTopOf="@id/iv_star3"
                app:layout_constraintBottom_toBottomOf="@id/iv_star3"/>

            <ImageView
                android:id="@+id/iv_star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_border_24dp"
                android:tint="@android:color/tertiary_text_light"
                app:layout_constraintStart_toEndOf="@id/iv_star4"
                app:layout_constraintTop_toTopOf="@id/iv_star4"
                app:layout_constraintBottom_toBottomOf="@id/iv_star4"/>

            <TextView
                android:id="@+id/tv_vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Vote Count"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/iv_star1"
                app:layout_constraintStart_toStartOf="@id/iv_star1"
                app:layout_constraintEnd_toEndOf="@id/iv_star5"/>

            <com.github.ivbaranov.mfb.MaterialFavoriteButton
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                app:layout_constraintBottom_toBottomOf="@id/tv_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_rating"
                app:mfb_color="black"
                app:mfb_animate_favorite="true"
                app:mfb_type="heart"/>

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_vote_count"/>

            <TextView
                android:id="@+id/overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/overview"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_poster" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:lineSpacingMultiplier="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/overview"
                app:layout_constraintStart_toStartOf="@id/overview"
                app:layout_constraintTop_toBottomOf="@id/overview"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@tools:sample/lorem/random" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>